--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,16 @@
             "email": "ben@murmurcreative.com"
         }
     ],
-    "require": {},
+    "require": {
+        "squizlabs/php_codesniffer": "^3.1"
+    },
     "autoload": {
         "psr-4": {
             "Murmur\\WP\\": "src/"
         }
+    },
+    "scripts": {
+        "check": ["phpcs --standard=phpcs.xml src"],
+        "fix": ["phpcbf --standard=phpcs.xml src"]
     }
 }
