--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Livy\\Plumbing\\ACF": "src/"
+            "Livy\\Plumbing\\ACF\\": "src/"
         }
     },
     "scripts": {
